{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 153,
  "lineage": "885e7bd0-0aaa-3170-0538-de1230e00e7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e122a5b090f377d",
            "arn": "arn:aws:ec2:eu-west-2:390403858168:instance/i-0958efc733d4c3fd9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0958efc733d4c3fd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee9699703ed1ef8b",
            "private_dns": "ip-10-0-0-205.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.205",
            "public_dns": "ec2-3-8-3-185.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.3.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ab6a612f85d3f45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023e6652bd97e4c30",
            "tags": {
              "Name": "vld-5-dev-eu-west-2-nginx-1"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-nginx-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e38e8da08d149c3a"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e122a5b090f377d",
            "arn": "arn:aws:ec2:eu-west-2:390403858168:instance/i-0c0cd24f8b00f93e4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0cd24f8b00f93e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dca274cfdf9db8bd",
            "private_dns": "ip-10-0-0-24.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.24",
            "public_dns": "ec2-13-40-73-226.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.73.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d02aafd9471f0093",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023e6652bd97e4c30",
            "tags": {
              "Name": "vld-5-dev-eu-west-2-nginx-2"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-nginx-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e38e8da08d149c3a"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:internet-gateway/igw-0735b2d2f2cec101e",
            "id": "igw-0735b2d2f2cec101e",
            "owner_id": "390403858168",
            "tags": {
              "Name": "vld-5-dev-eu-west-2-gateway"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-gateway"
            },
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:loadbalancer/app/globo-web-alb/bbcbd9d0ff54bb8f",
            "arn_suffix": "app/globo-web-alb/bbcbd9d0ff54bb8f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1779081078.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:loadbalancer/app/globo-web-alb/bbcbd9d0ff54bb8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d5293067cb5dec1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023e6652bd97e4c30"
              },
              {
                "subnet_id": "subnet-0fc8105b289982431"
              }
            ],
            "subnets": [
              "subnet-023e6652bd97e4c30",
              "subnet-0fc8105b289982431"
            ],
            "tags": {
              "billing_code": "VLD",
              "company": "Globomantics",
              "project": "Globomantics-Globomantics Pluralsight"
            },
            "tags_all": {
              "billing_code": "VLD",
              "company": "Globomantics",
              "project": "Globomantics-Globomantics Pluralsight"
            },
            "vpc_id": "vpc-0197bd77f3b2fa3be",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:listener/app/globo-web-alb/bbcbd9d0ff54bb8f/9dd21592af410f3d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:listener/app/globo-web-alb/bbcbd9d0ff54bb8f/9dd21592af410f3d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:loadbalancer/app/globo-web-alb/bbcbd9d0ff54bb8f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "billing_code": "VLD",
              "company": "Globomantics",
              "project": "Globomantics-Globomantics Pluralsight"
            },
            "tags_all": {
              "billing_code": "VLD",
              "company": "Globomantics",
              "project": "Globomantics-Globomantics Pluralsight"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c",
            "arn_suffix": "targetgroup/nginx-alb-tg/2c3404d41263069c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "VLD",
              "company": "Globomantics",
              "project": "Globomantics-Globomantics Pluralsight"
            },
            "tags_all": {
              "billing_code": "VLD",
              "company": "Globomantics",
              "project": "Globomantics-Globomantics Pluralsight"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c-20250415111548062400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c",
            "target_id": "i-0958efc733d4c3fd9"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c-20250415111548162800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:390403858168:targetgroup/nginx-alb-tg/2c3404d41263069c",
            "target_id": "i-0c0cd24f8b00f93e4"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:route-table/rtb-05b838298bffb4c31",
            "id": "rtb-05b838298bffb4c31",
            "owner_id": "390403858168",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0735b2d2f2cec101e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vld-5-dev-eu-west-2-route-table"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006ceec4c7d492534",
            "route_table_id": "rtb-05b838298bffb4c31",
            "subnet_id": "subnet-023e6652bd97e4c30"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:security-group/sg-0d5293067cb5dec1f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5293067cb5dec1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "390403858168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vld-5-dev-eu-west-2-alb-security-group"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:security-group/sg-0e38e8da08d149c3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e38e8da08d149c3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "390403858168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vld-5-dev-eu-west-2-security-group"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:subnet/subnet-023e6652bd97e4c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023e6652bd97e4c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403858168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vld-5-dev-eu-west-2-subnet1"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-subnet1"
            },
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:subnet/subnet-0fc8105b289982431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc8105b289982431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403858168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vld-5-dev-eu-west-2-subnet2"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-subnet2"
            },
            "vpc_id": "vpc-0197bd77f3b2fa3be"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:390403858168:vpc/vpc-0197bd77f3b2fa3be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080a80d681c92c3cc",
            "default_route_table_id": "rtb-0a2fb0254786b6d19",
            "default_security_group_id": "sg-04f9fa40190e2a6e9",
            "dhcp_options_id": "dopt-0e1a2b0cffa8c9003",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0197bd77f3b2fa3be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2fb0254786b6d19",
            "owner_id": "390403858168",
            "tags": {
              "Name": "vld-5-dev-eu-west-2-vpc"
            },
            "tags_all": {
              "Name": "vld-5-dev-eu-west-2-vpc"
            }
          }
        }
      ]
    }
  ]
}